@@ -17,6 +17,7 @@
 * PayPal Express gateway: Fix error when no address information is in response [pierre]
 * Ogone: Use BYPSP for ALIASOPERATION [ntalbott]
 * Paymill: Handle error storing card [duff]
+* SagePay integration: Add referrer field [melari]
 
 == Version 1.31.1 (February 25, 2013)
 
